--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,12 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: Welcome to Ao (Sharon) Xu's Blog!
+author: Ao (Sharon) Xu
+email: sharon.xu@emory.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-
+ Ao (Sharon) Xu is a highly motivated analytics professional who is intensely passionate about telling the stories behind the numbers—so passionate that she is currently enrolled in Emory University, Goizueta Business School’s Master of Science in Business Analytics program in Atlanta, Georgia. Sharon believes that the best analytics practices utilize business experience, data intelligence and technology toolkits to assist marketers in gathering insights from data. This empower data scientists to ask the right questions for building better-fitting models and to support executive managers in making strategic decisions to achieve the company’s goals. She has interned in various data-abundant industries including a fintech big data company in China, a leading IT hardware retail chain in Australia and SAP Labs China’s digital innovation space. Trained in multiple quantitative fields throughout her undergraduate coursework, Sharon speaks the languages of business, data and technology. Ms. Xu holds a Bachelor of Commerce in Accounting and Econometrics from Monash University.
 # social links
 twitter_username: your-twitter-handle
 github_username:  your-github-handle
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: jekyll-theme-time-machine
+theme: minima
